src/objects/MetrostudySalesRegion__c.object
<CustomObject>
    <description>Metrostudy Sales Region - Available sales regions to assign to geographies</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of included geographies</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapLabel__c</fullName>
        <label>Map Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempID_DNU__c</fullName>
        <description>Temp ID for importing</description>
        <label>TempID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeDNU__c</fullName>
        <description>DBD or RD</description>
        <inlineHelpText>DBD or RD Region</inlineHelpText>
        <label>Type DNU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBD</fullName>
                </value>
                <value>
                    <fullName>RD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_DNU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Emp DNU</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Metrostudy Sales Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>Description__c</columns>
        <columns>MapLabel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>California</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>California,CA</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>California</value>
        </filters>
        <label>California</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FL_Regions</fullName>
        <columns>NAME</columns>
        <columns>User_DNU__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FL,jacksonville</value>
        </filters>
        <label>FL Regions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Florida</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Florida,FL,Saras</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>Florida,Naples,Saraso</value>
        </filters>
        <label>Florida</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Northeast</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Northeast,NY,Maryland</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>Northeast,Maryland</value>
        </filters>
        <label>Northeast</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Texas</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Austin,Houston,San Ant,Dallas</value>
        </filters>
        <filters>
            <field>Description__c</field>
            <operation>contains</operation>
            <value>Texas,TX</value>
        </filters>
        <label>Texas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>